context, entity added

--- a/Notifications_WebAPI/appsettings.json
+++ b/Notifications_WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Server=tcp:ec-jsbackend.database.windows.net,1433;Initial Catalog=ec-jsbackendsql;Persist Security Info=False;User ID=ec-jsbackend;Password=h\"T\"GduD8}r=4S=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
