--- a/Notifications_WebAPI/appsettings.json
+++ b/Notifications_WebAPI/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServer": "Server=tcp:ec-jsbackend.database.windows.net,1433;Initial Catalog=ec-jsbackendsql;Persist Security Info=False;User ID=ec-jsbackend;Password=h\"T\"GduD8}r=4S=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "Keycloak": {
+    "realm": "jsbackend",
+    "auth-server-url": "https://idp.dev.hostport.net",
+    "ssl-required": "none",
+    "resource": "backoffice",
+    "verify-token-audience": false,
+    "credentials": {
+      "secret": "GzBPguzIxrBlEnYy0GuecOx9KCyaTRXe"
+    },
+    "confidential-port": 0
   }
 }
