--- a/Notifications_WebAPI/Notifications_WebAPI.csproj
+++ b/Notifications_WebAPI/Notifications_WebAPI.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.4.1" />
+    <PackageReference Include="Keycloak.AuthServices.Common" Version="2.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
